@@ -4,6 +4,8 @@ Below is a complete listing of changes for each revision of HighLine.
 
 == 1.5.0
 
+* Fixed a bug that would prevent Readline from showing all completions.
+  (reported by Yaohan Chen)
 * Added the ability to pass a block to HighLine#agree().
   (patch by Yaohan Chen)
 
